--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsconfig/svelte": "^1.0.0",
     "node-sass": "^5.0.0",
     "rollup": "^2.32.1",
+    "rollup-plugin-copy-assets": "^2.0.3",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.1.0",
     "rollup-plugin-terser": "^7.0.2",
